# rapl-joule-meter

./: .gitignore  CMakeLists.txt  README.md  autogen.sh  configure
.github/workflows/: c-cpp.yml
cmake/: RaplConfig.cmake.in
include/: rapl.h
src/: rapl.c
tests/: CMakeLists.txt
tests/main/: saxpy.cpp  test
